--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-leaflet/core": "^2.1.0",
     "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.15.1",
     "@tanstack/react-query": "^5.83.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,11 +58,14 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-i18next": "^15.7.4",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
